--- a/manifests/shoppingapi.yaml
+++ b/manifests/shoppingapi.yaml
@@ -49,3 +49,28 @@ spec:
       port: 8000
       targetPort: 80
       nodePort: 31000
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: shoppingapi-deployment
+  namespace: default
+  labels:
+    app: sla-manager-app
+rules:
+- apiGroups: ["monitoring.coreos.com"] # "" indicates the core API group
+  resources: ["prometheusrules"]
+  verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: role-binding
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: shoppingapi-deployment
+subjects:
+- kind: ServiceAccount
+  name: default
+  namespace: default
