--- a/pipelines/shoppingapi-pipelines.yml
+++ b/pipelines/shoppingapi-pipelines.yml
@@ -3,8 +3,13 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/docker
 
 trigger:
-- main
-
+  branches:
+    include:
+    - main
+    paths:
+      includes:
+      - Shopping/Shopping.API/*   
+      - aks/shoppingapi.yaml
 resources:
 - repo: self
 
