--- a/pipelines/shoppingapi-pipelines.yaml
+++ b/pipelines/shoppingapi-pipelines.yaml
@@ -7,7 +7,7 @@ trigger:
     include:
     - main
   paths:
-    includes:
+    include:
     - Shopping/Shopping.API/*   
     - aks/shoppingapi.yaml
 resources:
